--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -146,11 +146,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/profile_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" />
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/profile_viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
