--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_search" />
 
     <item
-        android:id="@+id/post"
+        android:id="@+id/add"
         android:icon="@drawable/add_circle"
         android:title="@string/add" />
     <item
