--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -9,18 +9,37 @@
 
     android:background="@color/white">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/addPost_materialToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        tools:layout_editor_absoluteX="1dp"
+
+        app:title="New Post"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <ImageView
         android:id="@+id/addPost_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/image_icon"
 
 
         app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addPost_materialToolbar"
         tools:srcCompat="@tools:sample/avatars" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -88,6 +107,7 @@
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.9" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
