RecyclerView adapter created

--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -36,6 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/image_icon"
 
+        android:scaleType="centerCrop"
 
         app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
